High z-index fix for use with tab plugins

--- a/simplemde/assets/css/editor.scss
+++ b/simplemde/assets/css/editor.scss
@@ -29,7 +29,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
-    z-index: 10;
+    z-index: 2;
     
     .editor-toolbar-inner {
       position: relative;
